2006-05-07  Yevgen Muntyan  <muntyan@tamu.edu>

	reviewed by: Gustavo Carneiro

	* gobject/gobjectmodule.c (_log_func, add_warning_redirection),
	(remove_handler, disable_warning_redirections, init_gobject):
	* gobject/pygobject.h:  Add new pyg_add_warning_redirection and
	pyg_disable_warning_redirections APIs (bug #323786 again).

2006-05-07  Johan Dahlin  <johan@gnome.org>

	* Makefile.am (CLEANFILES): Remove pygtk.py, it's not
	auto-generated any longer. Thanks to Kjartan for noticing.

2006-05-07  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/pygoptioncontext.c:
	s/sizeof(PyGMainContext)/sizeof(PyGOptionContext)/ (copy-paste error).

2006-05-01  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/gobjectmodule.c (pyg_pid_close): Add a close() method
	to the GPid wrapper.
	
	* gobject/gobjectmodule.c (pyg_pid_free, pyg_pid_new),
	(pyg_spawn_async, init_gobject): Wrap GPid in an object whose
	destructor calls g_spawn_close_pid.  Fixes #340160.

2006-04-29  Johannes Hölzl <johannes.hoelzl@gmx.de>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* examples/Makefile.am:
	* examples/option.py:
	* gobject/Makefile.am:
	* gobject/gobjectmodule.c: (init_gobject):
	* gobject/option.py:
	* gobject/pygobject-private.h:
	* gobject/pygoptioncontext.c: (pyg_option_context_init),
	(pyg_option_context_dealloc), (pyg_option_context_parse),
	(pyg_option_context_set_help_enabled),
	(pyg_option_context_get_help_enabled),
	(pyg_option_context_set_ignore_unknown_options),
	(pyg_option_context_get_ignore_unknown_options),
	(pyg_option_context_set_main_group),
	(pyg_option_context_get_main_group),
	(pyg_option_context_add_group), (pyg_option_context_compare),
	(pyg_option_context_new):
	* gobject/pygoptiongroup.c: (check_if_owned), (destroy_g_group),
	(pyg_option_group_init), (pyg_option_group_dealloc), (arg_func),
	(pyg_option_group_add_entries),
	(pyg_option_group_set_translation_domain),
	(pyg_option_group_compare), (pyg_option_group_transfer_group),